# CarbonEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: CarbonEngine-release.yml  release-branch-builds.yml
Carbon/Core/: CMakeLists.txt
Carbon/Core/src/: Main.cpp
Carbon/Math/: CMakeLists.txt
Carbon/Math/includes/: Math.hpp
Carbon/Math/src/: Math.cpp
Carbon/Math/tests/: CMakeLists.txt  VectorTests.cpp
Carbon/Platform/: CMakeLists.txt
Carbon/Platform/src/: Platform.cpp
Carbon/Platform/tests/: CMakeLists.txt  WindowsTests.cpp
Carbon/Renderer/: CMakeLists.txt
Carbon/Renderer/includes/: Renderer.hpp
Carbon/Renderer/tests/: CMakeLists.txt  RendererTests.cpp
Carbon/Utils/: CMakeLists.txt
Carbon/Utils/src/: Logger.cpp
Carbon/Utils/tests/: CMakeLists.txt  UtilsTests.cpp
CarbonEngine_v1/: CMakeLists.txt
CarbonEngine_v1/.github/workflows/: release-branch-builds.yml
CarbonEngine_v1/Engine/Platform/: PlatformEventManager.h
CarbonEngine_v1/Engine/Renderer/: Renderer.cpp
CarbonEngine_v1/Engine/Utils/: Win32Logger.cpp
CarbonEngine_v1/TestGame/: CMakeLists.txt
CarbonEngine_v1/Tests/: MathTests.cpp
CarbonEngine_v2/CarbonEngine/: CarbonEngine.sln
CarbonEngine_v2/CarbonEngine/CarbonEngine/: Audio.cpp  Audio.h  CarbonEngine.vcxproj  CarbonEngine.vcxproj.filters  CarbonLogger.h  ControllerInput.cpp  ControllerInput.h  Defines.h  KeyboardInput.cpp  KeyboardInput.h  PlatformEventHandler.cpp  PlatformEventHandler.h  PlatformEventHandler.inl  PlatformEventManager.cpp  PlatformEventManager.h  Renderer.cpp  Renderer.h  Win32Logger.cpp  Win32Platform.cpp  Win32Platform.h
CarbonEngine_v2/CarbonEngine/CarbonEngine/x64/Debug/: CarbonEngine.dll.recipe  CarbonEngine.ilk  vc143.idb
CarbonEngine_v2/CarbonEngine/CarbonEngine/x64/Debug/CarbonEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CarbonEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
CarbonEngine_v2/CarbonEngine/CarbonEngine/x64/Release/: CarbonEngine.dll.recipe  CarbonEngine.iobj  CarbonEngine.ipdb
CarbonEngine_v2/CarbonEngine/CarbonEngine/x64/Release/CarbonEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
CarbonEngine_v2/CarbonEngine/TestGame/: Main.cpp  TestGame.vcxproj
CarbonEngine_v2/CarbonEngine/TestGame/x64/Debug/: TestGame.exe.recipe  TestGame.ilk  vc143.idb
CarbonEngine_v2/CarbonEngine/TestGame/x64/Debug/TestGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
CarbonEngine_v2/CarbonEngine/TestGame/x64/Release/: TestGame.exe.recipe  TestGame.iobj  TestGame.ipdb
CarbonEngine_v2/CarbonEngine/TestGame/x64/Release/TestGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TestGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
CarbonEngine_v2/CarbonEngine/x64/Debug/: CarbonEngine.exp  CarbonEngine.lib  TestGame.exp  TestGame.lib
CarbonEngine_v2/CarbonEngine/x64/Release/: CarbonEngine.exp  CarbonEngine.lib  TestGame.exp  TestGame.lib
Engine/: CMakeLists.txt
Engine/Includes/: Logger.hpp  Platform.hpp
Engine/Platform/: Platform.hpp  PlatformEventHandler.cpp  PlatformEventHandler.h  PlatformEventHandler_inl.h  PlatformEventManager.cpp  PlatformEventManager.h  PlatformEventManager_inl.h  Win32Platform.cpp  Win32Platform.h
Engine/Renderer/: Renderer.cpp  Renderer.h
Engine/Tests/: CMakeLists.txt  MathTests.cpp
Engine/Utils/: CarbonLogger.h  Defines.h  Logger.h  Logger_inl.h  Win32Logger.cpp
TestGame/: CMakeLists.txt
TestGame/src/: Main.cpp
Tests/: CMakeLists.txt  MathTests.cpp
src/: CMakeLists.txt
src/Core/: Main.cpp
